<resources>
    <string name="app_name">BC 2002</string>
    <string name="login">Log in</string>
    <string name="desc">description</string>
    <string name="email_here">email here</string>
    <string name="password_here">password here</string>
    <string name="password">password</string>
    <string name="forget_your_password">Forgot your Password?</string>
    <string name="sign_up">Sign up</string>
    <string name="verify_password">verify password</string>
    <string name="submit">Submit</string>
    <string name="personal_details">PersonalDetails</string>
    <string name="educational_details">Educational Details</string>
    <string name="occupational_details">Occupational Details</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="email_address">Email address</string>
    <string name="mobile">Mobile</string>
    <string name="home">Home</string>
    <string name="married">Married</string>
    <string name="start_date">Started Year</string>
    <string name="end_date">End Year</string>
    <string name="company_name">Company Name</string>
    <string name="company_address">Company Address</string>
    <string name="job_title">Job Title</string>
    <string name="company_phone">Company Phone</string>
    <string name="job_start_date">Job Started Year</string>
    <string name="approve">Approve</string>
    <string name="logout">Logout</string>
    <string name="logout_form_this_application">Logout form this application</string>
    <string name="approve_users">Approve Users</string>
    <string name="approve_pending_users">Approve Pending Users</string>
    <string name="search_users">Search Users</string>
    <string name="search_users_using_data_fields">Search Users using data fields</string>
    <string name="user_data">User Data</string>
    <string name="show_and_edit_user_data">Show and edit User Data</string>
    <string name="search_text">search text</string>
    <string name="id_number">ID number</string>
    <string name="a_l_stream">A/L Stream</string>
    <string name="index_number">Index number</string>
    <string name="number_of_children">Number of children</string>
    <string name="reset_password">Reset Password</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="we_just_need_your_registered_email_id_to_sent_n_your_password_reset_instructions">
        We just need your registered Email Id to sent \n your password reset instructions.</string>
    <string name="cancel">Cancel</string>
    <string name="update_data">Update Data</string>

    <string-array name="search_fields">
        <item>Name</item>
        <item>Address</item>
        <item>A/L Stream</item>
        <item>Company Name</item>
    </string-array>

    <string-array name="married_fields">
        <item>select state</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="stream_fields">
        <item>select field</item>
        <item>Bio</item>
        <item>Maths</item>
        <item>Commerce</item>
        <item>Art</item>
    </string-array>

    <string-array name="jobTitle_fields">
        <item>select job title</item>
        <item>Agriculture</item>
        <item>Plantation and Livestock</item>
        <item>Art Design and Media</item>
        <item>Automobile Repair and Maintenance</item>
        <item>Building and Construction</item>
        <item>Electrical, Electronics and Telecommunication</item>
        <item>Finance Banking and Management</item>
        <item>Food Technology</item>
        <item>Gem and Jewellery</item>
        <item>Heavy Vehicles Operations</item>
        <item>Hotel and Tourism</item>
        <item>Human Resource Management</item>
        <item>Information Communication and Multimedia Technology</item>
        <item>Languages</item>
        <item>Leather and Footwear</item>
        <item>Marine and Nautical Science</item>
        <item>Mechatronics Technology</item>
        <item>Medical and Health Science</item>
        <item>Metal and Light Engineering</item>
        <item>Office Management</item>
        <item>Personal and Community Development</item>
        <item>Printing and Packaging</item>
        <item>Refrigeration and Air Conditioning</item>
        <item>Textile and Garment</item>
        <item>Wood Related</item>
        <item>Other</item>
    </string-array>

</resources>
