<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <!-- Here you can put your logo or brand name -->

            <TextView
                android:text = "@string/forget_password"
                android:textColor="@color/colorPrimaryTextColor"
                android:layout_width="wrap_content"
                android:layout_height = "wrap_content"
                android:id = "@+id/textView1"
                android:textSize = "35sp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:gravity="center"
                android:drawablePadding="12dp"
                android:padding="16dp" />


            <TextView
                android:text = "@string/we_just_need_your_registered_email_id_to_sent_n_your_password_reset_instructions"
                android:layout_width="wrap_content"
                android:layout_height = "wrap_content"
                android:id = "@+id/textView2"
                android:textSize = "15sp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:gravity="center"
                android:drawablePadding="12dp"
                android:padding="16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:id="@+id/emailField"
                android:ems="10"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:padding="16dp"
                android:hint="@string/email_address"
                android:textColorHint="@color/colorPrimaryTextColor"
                android:maxLines="1"
                android:drawableLeft="@drawable/ic_account_box_accent2_24dp"
                android:layout_marginTop="70dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/resetButton"
                android:background="@drawable/accent2_button_background"
                android:text="@string/reset_password"
                android:onClick="sendResetEmail"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:padding="16dp"
                android:focusable="true" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>