<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/new_login_gradients">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <!-- Here you can put your logo or brand name -->

            <ImageView
                android:layout_width="240dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:padding="16dp"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/bclogo"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:id="@+id/emailField"
                android:ems="10"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:padding="16dp"
                android:hint="@string/email_address"
                android:textColorHint="#fff"
                android:maxLines="1"
                android:drawableLeft="@drawable/ic_account_box_white_24dp"
                android:layout_marginTop="70dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/passwordField"
                android:ems="10"
                android:drawablePadding="12dp"
                android:padding="16dp"
                android:hint="@string/password"
                android:textColorHint="#fff"
                android:maxLines="1"
                android:background="@android:color/transparent"
                android:layout_marginTop="4dp"
                android:drawableLeft="@drawable/ic_password_white_24dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/verifyPasswordField"
                android:ems="10"
                android:drawablePadding="12dp"
                android:padding="16dp"
                android:hint="@string/verify_password"
                android:textColorHint="#fff"
                android:maxLines="1"
                android:background="@android:color/transparent"
                android:layout_marginTop="4dp"
                android:drawableLeft="@drawable/ic_password_white_24dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_login"
                android:text="@string/sign_up"
                android:onClick="register"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:textColor="#f16f7d"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:padding="16dp"
                android:focusable="true" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>