<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/new_login_gradients">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="56dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">


            <!-- personal data -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/darker_gray"
                android:padding="16dp"
                android:text="@string/personal_details"
                android:textSize="25dp"
                android:gravity="start"
                android:layout_gravity="center"
                android:textAlignment="textStart" />

            <!-- Name Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText android:id="@+id/personalNameField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:inputType="textPersonName"
                    android:textColorHint="#fff"
                    android:hint="Name"
                    android:drawablePadding="12dp"
                    android:padding="16dp" />
            </android.support.design.widget.TextInputLayout>

            <!-- Address Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/personalAddressField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:hint="Address"
                    android:drawablePadding="12dp"
                    android:padding="16dp" />

            </android.support.design.widget.TextInputLayout>

            <!-- dob Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/personalDOBField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:hint="Date of Birth"
                    android:drawablePadding="12dp"
                    android:padding="16dp" />

            </android.support.design.widget.TextInputLayout>

            <!--  Email Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/personalEmailField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:hint="Email address"
                    android:inputType="textEmailAddress"
                   />

            </android.support.design.widget.TextInputLayout>

            <!-- mobile number -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/personalMobileField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:hint="Mobile"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <!-- home number -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/personalHomeField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:hint="Home"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <!-- married Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColorHint="#fff"
                android:textColor="#fff"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/personalMarriedField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColorHint="#fff"
                    android:hint="Married"
                    android:textColor="#fff"/>

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:padding="16dp"
                android:background="@android:color/darker_gray"/>

            <!-- educational data -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/darker_gray"
                android:padding="16dp"
                android:textSize="25dp"
                android:text="@string/educational_details"
                android:gravity="start"
                android:layout_gravity="center"
                android:textAlignment="textStart" />

            <!-- Stream Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText android:id="@+id/educationalStreamField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:inputType="textPersonName"
                    android:textColorHint="#fff"
                    android:hint="A/L Stream"
                    android:drawablePadding="12dp"
                    android:padding="16dp" />
            </android.support.design.widget.TextInputLayout>

            <!-- Start date Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText android:id="@+id/educationalStartDateField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:inputType="textPersonName"
                    android:textColorHint="#fff"
                    android:hint="Start Date"
                    android:drawablePadding="12dp"
                    android:padding="16dp" />
            </android.support.design.widget.TextInputLayout>

            <!-- End date Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText android:id="@+id/educationalEndDateField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:inputType="textPersonName"
                    android:textColorHint="#fff"
                    android:hint="End Date"
                    android:drawablePadding="12dp"
                    android:padding="16dp" />
            </android.support.design.widget.TextInputLayout>

            <!-- Higher studies Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText android:id="@+id/educationalHigherStudiesField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:hint="Higher Studies"
                    android:inputType="textPersonName"
                    android:drawablePadding="12dp"
                    android:padding="16dp" />
            </android.support.design.widget.TextInputLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:padding="16dp"
                android:background="@android:color/darker_gray"/>

            <!-- occupational data -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/darker_gray"
                android:textSize="25dp"
                android:padding="16dp"
                android:text="@string/occupational_details"
                android:gravity="start"
                android:layout_gravity="center"
                android:textAlignment="textStart" />

            <!-- Company name Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText android:id="@+id/occupationalCompanyNameField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:inputType="textPersonName"
                    android:textColorHint="#fff"
                    android:hint="Company Name"
                    android:drawablePadding="12dp"
                    android:padding="16dp" />
            </android.support.design.widget.TextInputLayout>

            <!-- Address Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText android:id="@+id/occupationalCompanyAddressField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:inputType="textPersonName"
                    android:textColorHint="#fff"
                    android:hint="Company Address"
                    android:drawablePadding="12dp"
                    android:padding="16dp" />
            </android.support.design.widget.TextInputLayout>

            <!-- Job title Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText android:id="@+id/occupationalJobTitleField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:inputType="textPersonName"
                    android:textColorHint="#fff"
                    android:hint="Job Title"
                    android:drawablePadding="12dp"
                    android:padding="16dp" />
            </android.support.design.widget.TextInputLayout>

            <!-- Phone Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText android:id="@+id/occupationalPhoneField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:inputType="textPersonName"
                    android:textColorHint="#fff"
                    android:hint="Company Phone"
                    android:drawablePadding="12dp"
                    android:padding="16dp" />
            </android.support.design.widget.TextInputLayout>

            <!-- Start Date Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText android:id="@+id/occupationalStartDateField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:inputType="textPersonName"
                    android:textColorHint="#fff"
                    android:hint="Job Start Date"
                    android:drawablePadding="12dp"
                    android:padding="16dp" />
            </android.support.design.widget.TextInputLayout>


            <!-- Submit Button -->

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_login"
                android:text="@string/submit"
                android:onClick="submitData"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:textColor="#f16f7d"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:padding="16dp"
                android:focusable="true" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>